platform/grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: grafana-dashboards
  labels:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/part-of: open-horizons-platform
spec:
  type: ClusterIP
  selector:
    app: grafana
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
